--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="desctop">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi iusto, voluptatum dicta ipsam provident adipisci! <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi iusto, voluptatum dicta ipsam provident adipisci!</p>
         </div>
-        <div class="btn"><button>Get Started</button></div>
+        <div class="btn"><a href="https://www.google.com.br" target="_blank"><button>Get Started</button></a></div>
 
        </div>
     </section>
@@ -123,7 +123,7 @@
             <div class="descsec2">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus minima amet vitae quisquam obcaecati magnam unde rerum omnis officia! Dignissimos.</p>
             </div>
-            <div class="btngrid2"><button>Get Started</button></div>
+            <div class="btngrid2"><a href="https://www.google.com.br" target="_blank"><button>Get Started</button></a></div>
         </article>
 
 
@@ -135,7 +135,7 @@
             <div class="descsec2">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus minima amet vitae quisquam obcaecati magnam unde rerum omnis officia! Dignissimos.</p>
             </div>
-            <div class="btngrid2"><button>Buy Now</button></div>
+            <div class="btngrid2"><a href="https://www.google.com.br" target="_blank"><button>Buy Now</button></a></div>
         </article>
     </div>
 
@@ -143,13 +143,13 @@
         
             <div class="linksocial">
                 <ul>
-                    <a href="#">
+                    <a href="https://www.facebook.com" target="_blank">
                         <li><i class="fa-brands fa-facebook"></i></li>
                     </a>
-                    <a href="#">
+                    <a href="https://www.twitter.com" target="_blank">
                         <li><i class="fa-brands fa-twitter"></i></li>
                     </a>
-                    <a href="#">
+                    <a href="https://www.gmail.com" target="_blank">
                         <li><i class="fa-brands fa-google-plus-g"></i></li>
                     </a>
                 </ul>
