--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <img src="images/logo_mob.svg" alt="">
+            <div class="icontop"><img src="images/logo_mob.svg" alt=""></div>
             <ul>
                 <a href="#">
                     <li>Home</li>
